# stm32cubemx-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml
cubemx/stm32cubemx-example/: .mxproject  Makefile  stm32cubemx-example.ioc
cubemx/stm32cubemx-example/Core/Src/: main.c
doc/: vscode_instructions.md
src/Core/Src/: gpio.c  main.c
